k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landmark-app
  namespace: development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: landmark-app
  template:
    metadata:
      labels:
        app: landmark-app
    spec:
      containers:
        - name: landmark-app
          image: landmark-technologies:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /api/students
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/students
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: landmark-app-service
  namespace: development
spec:
  selector:
    app: landmark-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
